<resources>
    <string name="app_name">TaskDone</string>
    <string name="no_data_to_be_displayed">No data to be displayed</string>
    <string name="login">Login</string>
    <string name="create_tasks">Criar tarefas</string>
    <string name="work_in_team">Work in Team</string>
    <string name="add_task">Add Task</string>
    <string name="no_tasks_message">You don’t have a task here</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="backlog">To Do</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Done</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="required_field">Required Field</string>
    <string name="invalid_date">Invalid date</string>
    <string name="select_date">Select date</string>
    <string name="filter_by_status">Filter by status</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="clear_filter_by_date">Clear the filter by date</string>
    <string name="search">Search</string>
    <string name="choose_one">Choose one</string>
    <string name="status_filter">Status Filter</string>
    <string name="all">All</string>
    <string name="or_signin_with_your_email_and_name">Or Sign in with your email and name</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="for_login_with_google_click_below">For login with Google click on button below</string>
    <string name="logo">Logo</string>
</resources>