<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_filter_by_status"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:orderInCategory="100"
        android:title="@string/filter_by_status"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter_by_date"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:orderInCategory="200"
        android:title="@string/filter_by_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_filter_by_date"
        android:icon="@drawable/ic_baseline_cleaning_services_24"
        android:orderInCategory="300"
        android:title="@string/clear_filter_by_date"
        app:showAsAction="never" />
</menu>