<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="br.com.raynerweb.ipl.taskdone.ui.fragment.TaskListFragment" />

        <variable
            name="viewModel"
            type="br.com.raynerweb.ipl.taskdone.ui.viewmodel.TaskListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            style="?attr/textAppearanceHeadline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/status_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onCheckedChanged="@{fragment::statusSelected}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/all" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_backlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backlog" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_progress" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
