<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="br.com.raynerweb.ipl.taskdone.ui.fragment.TaskFormFragment" />

        <variable
            name="viewModel"
            type="br.com.raynerweb.ipl.taskdone.ui.viewmodel.TaskFormViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.TaskFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                style="?attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textAutoComplete"
                android:text="@={viewModel.description}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_deadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_deadline"
                style="?attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:text="@={viewModel.date}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_calendar"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/date"
            android:focusable="true"
            android:onClick="@{fragment::showCalendar}"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/til_deadline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_deadline"
            app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

        <TextView
            android:id="@+id/tv_status"
            style="?textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_deadline" />

        <RadioGroup
            android:id="@+id/rg_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onCheckedChanged="@{fragment::statusSelected}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_backlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/backlog" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_progress" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{fragment::save}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </com.google.android.material.button.MaterialButton>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
